app/assets/stylesheets/parcc/protected_areas.css.scss
@import 'colors';

section div.left {
  float: left;
  width: 540px;
}

section div.right {
  float: left;
  width: 520px;
}

section.tva-sdm {
  height: 380px;

  .left {
    padding-right: 25px;
    box-sizing: border-box;
  }
}

.tva-values {
  width: 65%;
  li {
    margin-bottom: 20px;
    span {
      font-size: 14px;
      font-family: "MuseoSans-300";
      &.right-value { float: right; }
    }
  }
}

.percentage-bar {
  margin: 35px 0 15px 0;
  background-color: $light-grey;
  height: 35px;
  .percentage {
    height: 100%;
    background-color: $color--vulnerability-percentage;
  }
}

.suitability { margin-top: 70px; }
.suitability-table-container { position: relative; }
.suitability-table {
  th {
    vertical-align: middle;
    span.main-title {
      float: left;
    }
  }

  .change-value { text-align: center; }
  i.fa { font-size: 18px; }

  div.cell-container {
    float: right;
    margin-right: 40px;
  }
}

.sub-header {
  padding-top: 5px;
  float: left;
}

.assessment-info {
  margin-top: 25px;
  a {
    text-decoration: underline;
    font-family: "MuseoSans-300";
  }
  i.fa {
    font-size: 16px;
  }
}

.download-data {
  height: 85px;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: $color--line-border-bottom;
  .download-box {
    margin: 24px 0;
    height: 35px;
    background-color: $very-light-green;
    i {
      color: $dark-green;
      font-size: 16px;
      padding-right: 5px;
    }
    a {
      text-decoration: underline;
    }
    p {
      padding: 10px;
    }
  }
}

